# story-factory

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ACTUAL_ISSUES_FOUND.md  ANALYSIS_REPORT.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUsersAurelioAppDataLocalTempcoverage_report.txt  LICENSE  MODELS.md  MODELS_ANALYSIS.md  Makefile  PYPROJECT_IMPROVEMENTS.md  README.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  UI_FEATURES_REGENERATION.md  UI_MOCKUP.md  UI_SCREENSHOT.txt  UX_UI_IMPROVEMENTS.md  config.py  coverage.json  healthcheck.py  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  settings.example.json  settings.json  settings.py  start.bat  start.ps1  temp_items.json  test_analytics_demo.py
.github/: CONTRIBUTING.md  COPILOT_PR_SETUP.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/instructions/: agents.instructions.md  test-files.instructions.md  ui-pages.instructions.md
.github/workflows/: auto-label.yml  ci.yml  claude-code-review.yml  claude.yml  sync-cdn-versions.yml
.reports/: codemap-diff.txt
agents/: __init__.py  architect.py  base.py  continuity.py  editor.py  interviewer.py  validator.py  writer.py
codemaps/: architecture.md  backend.md  data.md  frontend.md
docs/: ARCHITECTURE.md  ASYNC_GENERATION.md  CODE_QUALITY.md  COMPARISON_PAGE.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPORT_FEATURE.md  IMPORT_UI_FLOW.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  MODELS.md  PROGRESS_TRACKING.md  PROGRESS_TRACKING_UI.md  PROMPT_ARCHITECTURE.md  PROMPT_IMPLEMENTATION_SUMMARY.md  PROMPT_SYSTEM_ARCHITECTURE.md  README.md  SCREENSHOT_CHECKLIST.md  TEMPLATES.md  TEST_QUALITY.md  TODO.md  TROUBLESHOOTING.md  UNDO_REDO.md  UX_UI_IMPROVEMENTS.md
docs/codemaps/: architecture.md  backend.md  data.md  frontend.md
docs/plans/: 2026-01-15-model-modes-scoring-design.md  2026-01-15-nicegui-testing-strategy.md
memory/: __init__.py  builtin_templates.py  entities.py  mode_database.py  mode_models.py  story_state.py  templates.py  world_database.py  world_quality.py
output/diagnostics/: INVESTIGATION_246.md
output/worlds/: 45aaea34-49ff-47ed-902b-c610f2d7f6f5.db
prompts/: README.md  __init__.py  cache.py  integration_example.py  metrics.py  template_manager.py
scripts/: README.md  __init__.py  _model_switching_helpers.py  _model_switching_scenarios.py  _ollama_helpers.py  audit_exceptions.py  check_coverage_changed.py  check_deps.py  check_file_size.py  control_panel.py  evaluate_ab_prompts.py  evaluate_calibration_variants.py  evaluate_judge_accuracy.py  evaluate_judge_consistency.py  evaluate_refinement.py  healthcheck.py  investigate_build_performance.py  investigate_entity_depth.py  investigate_gpu_contention.py  investigate_model_switching.py  investigate_retry_deduplication.py  investigate_schema_compliance.py  investigate_score_distribution.py  investigate_structured_output_quantization.py  investigate_validator_effectiveness.py  investigate_vram_usage.py  start.ps1
services/: __init__.py  backup_service.py  comparison_service.py  export_service.py  import_service.py  llm_client.py  model_mode_service.py  model_service.py  project_service.py  scoring_service.py  story_service.py  suggestion_service.py  template_service.py  world_quality_service.py  world_service.py
src/: __init__.py  settings.example.json  settings.py
src/agents/: __init__.py  architect.py  base.py  continuity.py  editor.py  interviewer.py  validator.py  writer.py
src/memory/: __init__.py  _chapter_versions.py  arc_templates.py  builtin_templates.py  builtin_world_templates.py  conflict_types.py  content_guidelines.py  cost_models.py  entities.py  mode_database.py  mode_models.py  story_state.py  templates.py  timeline_types.py  world_calendar.py  world_database.py  world_health.py  world_quality.py  world_settings.py
src/services/: __init__.py  backup_service.py  calendar_service.py  comparison_service.py  conflict_analysis_service.py  content_guidelines_service.py  context_retrieval_service.py  embedding_service.py  export_service.py  import_service.py  llm_client.py  model_mode_service.py  model_service.py  orchestrator.py  project_service.py  scoring_service.py  story_service.py  suggestion_service.py  template_service.py  temporal_validation_service.py  timeline_service.py  world_quality_service.py  world_service.py  world_template_service.py
src/settings/: __init__.py  _backup.py  _model_registry.py  _paths.py  _settings.py  _types.py  _utils.py  _validation.py
src/ui/: __init__.py  app.py  graph_renderer.py  keyboard_shortcuts.py  local_prefs.py  shortcuts.py  state.py  styles.css  theme.py
src/utils/: __init__.py  circuit_breaker.py  constants.py  environment.py  error_handling.py  exceptions.py  json_parser.py  logging_config.py  message_analyzer.py  model_utils.py  prompt_builder.py  prompt_registry.py  prompt_template.py  retry_strategies.py  similarity.py  sqlite_vec_loader.py  streaming.py  text_analytics.py  validation.py
tests/: __init__.py  conftest.py  smoke_test_async.py  test_error_handling.py  test_json_parser.py  test_orchestrator.py  test_settings.py  test_validators.py
tests/component/: conftest.py  test_app_entry.py  test_chat.py  test_graph.py  test_settings_page.py
tests/e2e/: __init__.py  conftest.py  test_app_loads.py
tests/integration/: __init__.py  conftest.py  test_app_startup.py  test_complete_story_flow.py  test_main_startup.py  (+3 more)
ui/: __init__.py  app.py  gradio_app.py  graph_renderer.py  keyboard_shortcuts.py  shortcuts.py  state.py  styles.css  theme.py
utils/: __init__.py  constants.py  environment.py  error_handling.py  exceptions.py  json_parser.py  logging_config.py  message_analyzer.py  metrics.py  model_utils.py  prompt_builder.py  prompt_registry.py  prompt_template.py  text_analytics.py  validation.py  validators.py
workflows/: __init__.py  orchestrator.py
(+478 files in other folders)
