# Story Factory - AI-Powered Multi-Agent Story Generation System
# https://github.com/Aureliolo/story-factory

# PEP 517/518: Modern Python build system
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# PEP 621: Project metadata
[project]
name = "story-factory"
version = "1.0.0"
description = "AI-powered multi-agent system for generating stories with local LLMs via Ollama"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aurelio"}
]
keywords = [
    "ai",
    "llm",
    "ollama",
    "story-generation",
    "multi-agent",
    "creative-writing",
    "local-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "ollama==0.6.1",
    "instructor==1.14.4",
    "openai==2.15.0",
    "nicegui==3.6.1",
    "pydantic==2.12.5",
    "networkx==3.6.1",
    "ebooklib==0.20",
    "reportlab==4.4.9",
    "Pillow==12.1.0",
    "python-docx==1.2.0",
    "PyYAML==6.0.3",
    "Jinja2==3.1.6",
    "customtkinter==5.2.2",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
    "playwright==1.57.0",
    "pytest-playwright==0.7.2",
]
dev = [
    "ruff==0.14.14",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "interrogate==1.7.0",
    "types-networkx==3.6.1.20251220",
    "types-Pillow==10.2.0.20240822",
    "types-reportlab==4.4.9.20260117",
]
all = [
    "story-factory[test,dev]",
]

[project.urls]
Homepage = "https://github.com/Aureliolo/story-factory"
Repository = "https://github.com/Aureliolo/story-factory"
"Bug Tracker" = "https://github.com/Aureliolo/story-factory/issues"

[project.scripts]
story-factory = "main:main"

# Setuptools configuration
[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests*"]}}

[tool.setuptools.package-data]
"src.ui" = ["*.css"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # Line too long - ruff format handles code, not string literals
    "COM812",  # Trailing comma conflicts with formatter
    "ISC001",  # Implicit string concat conflicts with formatter
    "RUF001",  # Ambiguous unicode chars - false positive for intentional CJK test strings
]

# Mypy configuration
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
# Strict mode disabled until all functions have type annotations
# Enable these for stricter checking:
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
# Third-party libraries without type stubs
module = [
    "ebooklib.*",
    "docx",
    "docx.*",
    "yaml",
    "customtkinter",
    "customtkinter.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Scripts use customtkinter which lacks type stubs
module = ["scripts.control_panel"]
disable_error_code = ["import", "attr-defined", "no-untyped-call"]

[[tool.mypy.overrides]]
# NiceGUI 3.6+ has features (app.colors, ui.on_exception) not in type stubs yet
module = ["src.ui.app"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
# Mixin submodules use cross-mixin attribute access (self.db_path, self._lock, etc.)
# that mypy can't resolve without Protocol types. The composed classes in __init__.py
# combine all mixins correctly - validated by 2900+ passing tests.
module = [
    "src.agents.architect.*",
    "src.memory.mode_database.*",
    "src.memory.world_database.*",
    "src.services.export_service.*",
    "src.services.model_mode_service.*",
    "src.services.orchestrator.*",
    "src.services.story_service.*",
    "src.services.world_quality.*",
    "src.services.world_service.*",
    "src.settings.*",
    "src.ui.graph_renderer.*",
    "src.ui.pages.analytics.*",
    "src.ui.pages.models.*",
    "src.ui.pages.settings.*",
    "src.ui.pages.world.*",
    "src.ui.pages.write.*",
]
disable_error_code = ["attr-defined", "misc"]

[[tool.mypy.overrides]]
# Tests can be less strict with typing
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
main_file = "tests/component/test_app_entry.py"
# Treat warnings as errors for strict testing
filterwarnings = [
    "error",
    # Ignore sqlite3 ResourceWarnings during GC (test cleanup timing issue)
    "ignore:Exception ignored while finalizing database connection:pytest.PytestUnraisableExceptionWarning",
    # Ignore socket ResourceWarnings during GC (mock cleanup timing issue)
    "ignore:Exception ignored while finalizing socket:pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "e2e: End-to-end browser tests (require playwright)",
    "smoke: Quick startup validation tests",
    "integration: Integration tests for component interactions",
    "slow: Slow tests that take more than 1 second",
    "component: NiceGUI component tests using User fixture",
]

# Coverage configuration
[tool.coverage.run]
source = ["src", "scripts"]
omit = [
    "tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "*/conftest.py",
    "main.py",
    "src/ui/*",
    # Standalone utility scripts (not part of main application)
    "scripts/audit_exceptions.py",
    "scripts/check_deps.py",
    "scripts/healthcheck.py",
]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",
]
precision = 1
show_missing = true
skip_covered = false

# Interrogate configuration (docstring coverage)
[tool.interrogate]
fail_under = 100
ignore_init_module = true
ignore_init_method = false  # Check __init__ docstrings (CodeRabbit requirement)
ignore_magic = false  # Check __str__, __repr__, etc. (CodeRabbit requirement)
ignore_semiprivate = false
ignore_private = false
ignore_property_decorators = false  # Check @property docstrings (CodeRabbit requirement)
ignore_module = false
ignore_nested_functions = false
ignore_nested_classes = false
ignore_setters = false  # Check setter docstrings (CodeRabbit requirement)
verbose = 0
quiet = false
color = true
omit_covered_files = false
exclude = [
    "setup.py",
]
